# AutoSec-for-Mobile

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: security-scan.yml
.mobilesec/: config.example.yaml
src/mobilesec/: cli.py  config.py  knowledge.py  models.py
src/mobilesec/stages/: dast.py  dependency.py  mobile.py  report.py  sast.py
src/mobilesec/tools/: bandit.py  base.py  mobsf.py  nuclei.py  semgrep.py  sqlmap.py  trivy.py
